--- a/galeria.html
+++ b/galeria.html
@@ -20,9 +20,9 @@
         <ul class="lista">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="personajes.html">Personajes</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="renenas.html">Reseñas</a></li>
-          <li><a href="contacto.html#">Contacto</a></li>
+          <li><a href="galeria.html">galería</a></li>
+          <li><a href="resenas.html">Reseñas</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -34,9 +34,9 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="personajes.html">Personajes</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="renenas.html">Reseñas</a></li>
-          <li><a href="contacto.html#">Contacto</a></li>
+          <li><a href="galeria.html">galería</a></li>
+          <li><a href="resenas.html">Reseñas</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -49,7 +49,7 @@
           class="example-image-link"
           href="imagenes/galeria/25cb58ec79b5143e82887d6bf448fb6b.jpg"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear con su gato."
+          data-title="Miley cantando eufóricamente"
           ><img
             class="example-image"
             src="imagenes/galeria/25cb58ec79b5143e82887d6bf448fb6b.jpg"
@@ -62,7 +62,7 @@
           class="example-image-link"
           href="imagenes/galeria/39c02a935ef0ab4bdbe18ebf3a0889e5.jpg"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear señalando su imagen en un espejo."
+          data-title="Miley tocando la guitarra."
           ><img
             class="example-image"
             src="imagenes/galeria/39c02a935ef0ab4bdbe18ebf3a0889e5.jpg"
@@ -75,7 +75,7 @@
           class="example-image-link"
           href="imagenes/galeria/6d1f15669f6ceedc5d24150fe43b093e.jpg"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear volando"
+          data-title="Miley en su concierto"
           ><img
             class="example-image"
             src="imagenes/galeria/6d1f15669f6ceedc5d24150fe43b093e.jpg"
@@ -88,7 +88,7 @@
           class="example-image-link"
           href="imagenes/galeria/9bbf66bc8a638496d61e348aadd1f7f9.jpg"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear con su gato."
+          data-title="Miley vaquera"
           ><img
             class="example-image"
             src="imagenes/galeria/9bbf66bc8a638496d61e348aadd1f7f9.jpg"
@@ -101,7 +101,7 @@
           class="example-image-link"
           href="imagenes/galeria/efc8b3c3a84759acb02b036d5e611d4d.jpg"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear señalando su imagen en un espejo."
+          data-title="Miley en la serie."
           ><img
             class="example-image"
             src="imagenes/galeria/efc8b3c3a84759acb02b036d5e611d4d.jpg"
@@ -114,7 +114,7 @@
           class="example-image-link"
           href="imagenes/galeria/f5ab5beea362b40df1bc2372d9ff1453.jpg"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear volando"
+          data-title="Miley jugando al tenis"
           ><img
             class="example-image"
             src="imagenes/galeria/f5ab5beea362b40df1bc2372d9ff1453.jpg"
@@ -127,7 +127,7 @@
           class="example-image-link"
           href="imagenes/galeria/IMG.jpg"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear con su gato."
+          data-title="Miley de boxeadora."
           ><img
             class="example-image"
             src="imagenes/galeria/IMG.jpg"
@@ -140,7 +140,7 @@
           class="example-image-link"
           href="imagenes/galeria/IMG_5458.JPG"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear señalando su imagen en un espejo."
+          data-title="Miley con su tía."
           ><img
             class="example-image"
             src="imagenes/galeria/IMG_5458.JPG"
@@ -153,7 +153,7 @@
           class="example-image-link"
           href="imagenes/galeria/IMG_5459.JPG"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear volando"
+          data-title="Miley en la playa para 'The Movie'"
           ><img
             class="example-image"
             src="imagenes/galeria/IMG_5459.JPG"
@@ -166,7 +166,7 @@
           class="example-image-link"
           href="imagenes/galeria/IMG_5460.JPG"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear con su gato."
+          data-title="Miley cantando al final de 'The movie'."
           ><img
             class="example-image"
             src="imagenes/galeria/IMG_5460.JPG"
@@ -179,7 +179,7 @@
           class="example-image-link"
           href="imagenes/galeria/IMG_5463.JPG"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear señalando su imagen en un espejo."
+          data-title="Miley en la serie. Segunda temporada"
           ><img
             class="example-image"
             src="imagenes/galeria/IMG_5463.JPG"
@@ -190,9 +190,9 @@
       <div>
         <a
           class="example-image-link"
-          href="imagenes/galeria/miley-cyrus-teen-vogue-3.jpg"
+          href="Miley para Vogue"
           data-lightbox="Buzz"
-          data-title="Buzz Lightyear volando"
+          data-title=""
           ><img
             class="example-image"
             src="imagenes/galeria/miley-cyrus-teen-vogue-3.jpg"
