--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <ul class="lista">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="personajes.html">Personajes</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="renenas.html">Reseñas</a></li>
-          <li><a href="contacto.html#">Contacto</a></li>
+          <li><a href="galeria.html">Galería</a></li>
+          <li><a href="resenas.html">Reseñas</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -32,9 +32,9 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="personajes.html">Personajes</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="renenas.html">Reseñas</a></li>
-          <li><a href="contacto.html#">Contacto</a></li>
+          <li><a href="galeria.html">Galería</a></li>
+          <li><a href="resenas.html">Reseñas</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
@@ -145,7 +145,7 @@
       </article>
 
       <div class="movie-container">
-        <h3>"La pelicula"</h3>
+        <h3>"La película"</h3>
 
         <div class="movie-div">
           <iframe
