--- a/personajes.html
+++ b/personajes.html
@@ -12,8 +12,6 @@
     <link rel="stylesheet" type="text/css" href="css/index.css" />
     <title>Hannah Montana</title>
     <link rel="icon" type="image/png" href="imagenes/R (1).png" />
-
-    <title>Document</title>
   </head>
   <body>
     <header class="navbar">
@@ -21,9 +19,9 @@
         <ul class="lista">
           <li><a href="index.html">Inicio</a></li>
           <li><a href="personajes.html">Personajes</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="renenas.html">Reseñas</a></li>
-          <li><a href="contacto.html#">Contacto</a></li>
+          <li><a href="galeria.html">galería</a></li>
+          <li><a href="resenas.html">Reseñas</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -35,9 +33,9 @@
         <ul>
           <li><a href="index.html">Inicio</a></li>
           <li><a href="personajes.html">Personajes</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="renenas.html">Reseñas</a></li>
-          <li><a href="contacto.html#">Contacto</a></li>
+          <li><a href="galeria.html">galería</a></li>
+          <li><a href="resenas.html">Reseñas</a></li>
+          <li><a href="contacto.html">Contacto</a></li>
         </ul>
       </div>
     </div>
